Push playback buttons farther in front to prevent being behind connector lines

--- a/css/components/playback-controls.css
+++ b/css/components/playback-controls.css
@@ -5,6 +5,7 @@
 .playback-buttons {
   position: fixed;
   bottom: 0;
+  z-index: 2000;
   padding: 2rem 4rem;
   background-color: var(--color-gray-lighter);
 
